<resources>
    <string name="app_name">Tersive</string>
    <string name="action_settings">Settings</string>
    <string name="author_name">by %s</string>
    <string name="again">Again</string>
    <string name="back">Back</string>
    <string name="confirm_password">Confirm password</string>
    <string name="easy">Easy</string>
    <string name="email_address">Email address</string>
    <string name="end_session">End session</string>
    <string name="front">Front</string>
    <string name="good">Good</string>
    <string name="hand">Hand</string>
    <string name="hard">Hard</string>
    <string name="intro_title">Tersive Basics</string>
    <string name="loading">Loading...</string>
    <string name="login">Login</string>
    <string name="login_success">Successful login</string>
    <string name="login_failure">Invalid login</string>
    <string name="missing_field">Missing one or more fields</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="password">Password</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="phrase">Phrase</string>
    <string name="phrase_cards">Phrase Flashcards</string>
    <string name="practice_reading">Practice Reading</string>
    <string name="practice_writing">Practice Writing</string>
    <string name="register">Register</string>
    <string name="register_success">Successful registration and login</string>
    <string name="registration_taken">That registration is alreay used</string>
    <string name="show_answer">Show answer</string>
    <string name="tersive_basics">Tersive Basics</string>
    <string name="tersive_script">Tersive Script</string>
    <string name="tersive_key">Tersive Key</string>
    <string name="type">Type</string>
    <string name="word">Word</string>
    <string name="word_cards">Word Flashcards</string>
</resources>
