<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:baselineAligned="false">

        <FrameLayout
            android:id="@+id/hand_mode"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_background">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha=".2"
                android:contentDescription="@string/hand"
                android:scaleType="centerCrop"
                android:src="@drawable/hand_mode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hand"
                android:textSize="24sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/type_mode"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_background">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha=".2"
                android:contentDescription="@string/type"
                android:scaleType="centerCrop"
                android:src="@drawable/type_mode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/type"
                android:textSize="24sp" />

        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".2"
            android:contentDescription="@string/tersive_basics"
            android:scaleType="centerCrop"
            android:src="@drawable/handwriting" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/tersive_basics"
            android:textSize="24sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".2"
            android:contentDescription="@string/word_cards"
            android:scaleType="centerCrop"
            android:src="@drawable/word_cards" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/word_cards"
            android:textSize="24sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".2"
            android:contentDescription="@string/phrase_cards"
            android:scaleType="centerCrop"
            android:src="@drawable/phrase_cards" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/phrase_cards"
            android:textSize="24sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".2"
            android:contentDescription="@string/practice_reading"
            android:scaleType="centerCrop"
            android:src="@drawable/practice_reading" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/practice_reading"
            android:textSize="24sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:alpha=".2"
            android:contentDescription="@string/practice_writing"
            android:scaleType="centerCrop"
            android:src="@drawable/practice_writing" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/practice_writing"
            android:textSize="24sp" />

    </FrameLayout>

</LinearLayout>
